--- a/api/package.json
+++ b/api/package.json
@@ -7,8 +7,13 @@
   "license": "CC0",
   "description": "Simple simon game",
   "type": "module",
+  "engines": {
+    "node": "14.x",
+    "npm": "6.14.14"
+  },
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node -r dotenv/config app.js",
+    "dev": "nodemon -r dotenv/config app.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -19,7 +24,9 @@
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
     "mongodb": "^3.6.10",
-    "nodemon": "^2.0.12",
     "xss-clean": "^0.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
